--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": "16 || 18"
   },
   "dependencies": {
-    "@redux-devtools/extension": "3.2.5",
+    "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "^13.5.0",
